--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "openzeppelin-solidity": "^2.1.2",
     "truffle-assertions": "^0.7.2",
     "typechain": "^0.3.11",
-    "web3": "^1.0.0-beta.43"
+    "web3": "^1.2.6"
   },
   "scripts": {
     "build:contracts": "truffle compile",
@@ -27,8 +27,8 @@
     "truffle-error": "^0.0.5",
     "truffle-security": "^1.5.5",
     "truffle-typings": "^1.0.8",
-    "web3-eth": "^1.2.4",
-    "web3-utils": "^1.2.1"
+    "web3-eth": "^1.2.6",
+    "web3-utils": "^1.2.6"
   },
   "version": "0.0.0"
 }
