--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+  - vet
   - lint
   - build
   - security
@@ -6,8 +7,13 @@ cache:
   key: ${CI_COMMIT_REF_SLUG}
   paths:
   - node_modules/
-  - .yarn/
   - build/
+
+copyright:
+  stage: vet
+  script:
+    - .scripts/check-notice-authors.sh origin/master
+    - .scripts/check-copyright-notice.sh
 
 solium:
   image: node:latest
@@ -30,10 +36,9 @@ solhint:
 build:
   image: node:latest
   stage: build
-  before_script:
-    - yarn global add truffle typescript
   script:
-    - yarn install
+    - yarn global add truffle typescript
+    - yarn install --pure-lockfile
     - yarn build
     - yarn test
   allow_failure: false
@@ -41,10 +46,9 @@ build:
 coverage:
   image: node:latest
   stage: security
-  before_script:
-    - yarn global add truffle typescript
   script:
-    - yarn install
+    - yarn global add truffle typescript
+    - yarn install --pure-lockfile
     - yarn build
     - yarn run solidity-coverage
   allow_failure: true
