--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "web3": "^1.2.6"
   },
   "scripts": {
+    "clean": "rm -rf ./build/",
     "build:contracts": "truffle compile",
     "build:types": "typechain --target truffle './build/**/*.json'",
     "fix:truffle-typings": "sed -i.bak -e 's/= import(\"web3\")/= typeof import(\"web3\")/' node_modules/truffle-typings/index.d.ts",
     "postbuild:types": "sed -i.bak -e 's/BigNumber/BN/g' -e '/bignumber\\.js/d' types/truffle-contracts/index.d.ts",
     "build:js": "tsc -p .",
-    "build": "yarn build:contracts &&  yarn build:types && yarn fix:truffle-typings && yarn build:js",
+    "build": "yarn build:contracts && yarn build:types && yarn fix:truffle-typings && yarn build:js",
     "test": "truffle test"
   },
   "dependencies": {
