--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "web3-utils": "^1.2.6"
   },
   "version": "0.0.0",
-  "os": ["linux", "darwin"]
+  "os": [
+    "linux",
+    "darwin"
+  ]
 }
